--- a/style.css
+++ b/style.css
@@ -59,3 +59,6 @@ body {
     text-align: left;
     color: rgb(195, 43, 5);
 }
+
+h1 {
+font-size: 28px; text-align: center; color: #000000; margin-bottom: 20px; font-family: 'Georgia', serif;}
